# hydrus-software-stack

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  FORMATTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHILOSOPHY.md  README.md  REFACTORING_SUMMARY.md  camera-entrypoint.sh  common_camera_params.yaml  doctor.sh  download_rosbag.py  envsetup  format.sh  hocker  hydrus-cli  hydrus_cli.py  jetson.sh  monitor_arduino_logs.sh  monitor_serial.sh  pyproject.toml  requirements.txt  ros-entrypoint.sh  run_tests.sh  setup.py  setup_formatting.sh  setup_serial_monitor.sh  setup_venv_formatters.sh  ssh_docker_server.py  start_tmux_sessions.sh  test_3d_bbox_demo.py  virtual_arduino.py  zed2i_camera_params.yaml
.devcontainer/: Dockerfile  devcontainer.json
DVL/: Dockerfile
Embedded_IMU/: imu.py  imu_driver.py
Simulation/: cube.sdf  spawn_cube.py
autonomy/: CMakeLists.txt  README.md  __init__.py  arduino_simulator.py  main.py  package.xml  pyproject.toml  setup.py  test_controller.py
autonomy/config/: cv_detection.rviz  slam_visualization.rviz
autonomy/launch/: autonomy.launch  controller.launch  cv_publishers.launch  depth_estimation.launch  godot_bridge.launch  mission_planner.launch  monocular_slam.launch  profiler.launch  profiler_demo.launch  simulation.launch  vision_system.launch
autonomy/msg/: SimulationState.msg
autonomy/scripts/: __init__.py
autonomy/scripts/controller/: baud_rate_tester.py  controller_monitor.py  controller_serial.py  controller_tester.py  serial_ros_bridge.py  submarine_teleop.py  thruster_mapper.py  thruster_visualizer.py
autonomy/scripts/cv/: color_filter_controller.py  depth_estimation_node.py  distance.py  slam_visuation.py
autonomy/scripts/mission/: mission_controller.py  prequalification_tester.py
autonomy/scripts/profiler/: README.md  ROS_PROFILER.md  __init__.py  profiling_decorators.py  profiling_example.py  profiling_test.py  ros_profiler_demo.py  run_profiler_demo.sh
autonomy/scripts/services/: color_filter.py  profiling_example.py  ros_profiler.py
autonomy/scripts/web/: __init__.py  detection_viewer.py  run_viewer.sh
autonomy/scripts/web/templates/: index.html
autonomy/src/: API.py  __init__.py  api_server.py  controller_tester.py  controllers.py  custom_types.py  cv_publishers.py  file.py  godot_bridge.py  ros_mission_planning.py  test_ultralytics_optimization.py  tests.hss  windows_web_reader.py
autonomy/src/computer_vision/: detection_core.py  example_3d_bounding_boxes.py  inference_engine.py  optimization_utils.py  slam.py  test_3d_bounding_boxes.py
autonomy/src/godot_sim/: Submarine.tscn  SubmarineTest.tscn  icon.svg.import  project.godot
autonomy/src/godot_sim/scripts/: depth_camera.gd  detection_target.gd  main_scene.gd  submarine_controller.gd  submarine_controller.gd.uid  submarine_simulation.gd  submarine_simulation.gd.uid  water_environment.gd
autonomy/src/godot_sim/scripts/commands/: MovementCommand.gd  MovementCommand.gd.uid
autonomy/src/godot_sim/scripts/components/: Thruster.gd  Thruster.gd.uid
autonomy/src/godot_sim/scripts/config/: ThrusterLayout.gd  ThrusterLayout.gd.uid
autonomy/src/godot_sim/scripts/interfaces/: IThruster.gd  IThruster.gd.uid
autonomy/src/godot_sim/scripts/systems/: CameraSystem.gd  CameraSystem.gd.uid  InputHandler.gd  InputHandler.gd.uid  PhysicsSystem.gd  PhysicsSystem.gd.uid  ThrusterSystem.gd  ThrusterSystem.gd.uid
autonomy/src/mission_planner/: __init__.py  base_mission.py  gate_mission.py  gate_mission_tester.py  gate_tester_visualizer.py  mission_manager.py  mission_tree.py  prequalification_mission.py  slalom_mission.py  slalom_visualizer.py  tagging_mission.py  tagging_mission_test.py  tagging_mission_tester.py  tagging_mission_tester_2.py  task_parameters.py  test_slalom.py  test_slalom_integration.py  tests.hss  types.py
autonomy/src/mission_planner_legacy/: README.md  gate_tester_visualizer.py  mission_manager.py  mission_tree.py  tagging_mission_test.py  test_gate_mission.py  test_slalom_integration.py
autonomy/srv/: FireTorpedo.srv
autonomy/test/: controller.test  gate_mission.test  slalom_integration.test
autonomy2/: CMakeLists.txt  README.md  colcon.pkg  package.xml
autonomy2/src/cv_node_py/: CMakeLists.txt  README.md  colcon.pkg  package.xml  setup.cfg  setup.py
autonomy2/src/cv_node_py/cv_node_py/: node.py
autonomy2/src/cv_node_py/launch/: cv_node.launch.py
autonomy_interfaces/: CMakeLists.txt  README.md  package.xml
config/: inference_config.yaml  tmux_windows.json  zed2i_camera_params.yaml
data_engine/: Dockerfile  Makefile  README.md  Readme.md  config.py  docker-compose.yml  example.py  main.py  requirements.txt  run.py  sam_processor.py  setup.py  setup_x11.sh  test_imports.py  utils.py
docker/: README.md  docker-compose-amd64-cpu.yaml  docker-compose-amd64-cuda.yaml  docker-compose-jetson-tx2.yaml  jetson.sh  run_docker.py  run_docker.sh
docs/: ARDUINO_SERIAL_COMMUNICATION.md  PROFILING.md  SOCAT_ARDUINO_MULTIPLEXER_REFACTORING.md  TMUX_MODULAR_CONFIGURATION.md  ULTRALYTICS_OPTIMIZATION.md  pid_controller.md
embedded_arduino/: README.md
examples/: ultralytics_optimization_demo.py
hydrus/: autonomy_serial_test.sh
hydrus_software_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mission-planner/: Cargo.toml
mission-planner-c/: build.rs
my_cube_sim/: CMakeLists.txt  package.xml
scripts/: I want to work.md  activate_formatters.sh  arduino_debug.py  cli.py  (+16 more)
simulation/: CMakeLists.txt  HydrusSimManager.cpp  HydrusSimManager.h  README.md
simulation/hydrus_sim_ros2/: package.xml  setup.cfg  setup.py
simulation/hydrus_sim_ros2/data/scenarios/: hydrus_auv.scn
simulation/hydrus_sim_ros2/launch/: hydrussim.launch.py
simulation/launch/: hydrussim.launch.py
simulation/src/: HydrusSimManager.cpp  main.cpp
simulation/standalone_sim/: CMakeLists.txt
simulation/standalone_sim/scenarios/: hydrus_env.scn
simulation/standalone_sim/src/: main.cpp
src/computer_vision/: README.md  __init__.py  custom_types.py  depth_estimation.py  pyproject.toml
(+156 files in other folders)
