[project]
name = "computer-vision"
version = "0.1.0"
description = "Computer vision library for Hydrus autonomous underwater vehicle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.182",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["computer_vision"]
